--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="header"></div>
         <div class="button-container">
             <button class="new-book">New Book</button>
         </div>
 
         <div class="card-container"></div>
+        <div class="footer"></div>
     </div>
 
     <div class="modal">
@@ -29,7 +31,7 @@
             <input type="submit" value="Add">
         </form>
     </div>
-    
+
     <div class="overlay"></div>
 
 </body>
