added functionality to form

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <div class="modal">
         <legend>Add Book</legend>
-        <form action="app.js">
+        <form action="app.js" id="form">
             <input type="text" name="title" id="title" placeholder="Title">
             <input type="text" name="author" id="author" placeholder="Author">
-            <input type="number" name="author" id="author" placeholder="Pages">
+            <input type="number" name="author" id="pages" placeholder="Pages">
             <div class="read-container">
-                <input type="checkbox" name="read" id="read">
+                <input type="checkbox" name="read" id="read" value="read">
                 <label for="read"> Have you read this book?</label>
             </div>
             <input type="submit" value="Add">
