--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="wrapper">
         <div class="header"></div>
         <div class="button-container">
-            <button class="new-book">New Book</button>
+            <button class="new-book">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
+            </button>
         </div>
 
         <div class="card-container"></div>
@@ -25,7 +27,7 @@
             <input type="text" name="author" id="author" placeholder="Author">
             <input type="number" name="author" id="pages" placeholder="Pages">
             <div class="read-container">
-                <input type="checkbox" name="read" id="read" value="read">
+                <input type="checkbox" name="read" id="read">
                 <label for="read"> Have you read this book?</label>
             </div>
             <input type="submit" value="Add">
